--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,12 +7,9 @@ server:
       enabled: false
     include-exception: true
     include-message: always
-  port: 8081
+  port: 8080
 
 spring:
-  messages:
-    basename: errors
-
   output:
     ansi:
       enabled: always
@@ -25,8 +22,9 @@ spring:
 
   jpa:
     hibernate:
-#      ddl-auto: create
-      ddl-auto: update
+      ddl-auto: create
+#      ddl-auto: update
+#      ddl-auto: drop
     properties:
       hibernate:
         show_sql: true
