--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,17 +2,17 @@ server:
   servlet:
     session:
       tracking-modes: cookie
-  error:
-    whitelabel:
-      enabled: false
-    include-exception: true
-    include-message: always
+#  error:
+#    whitelabel:
+#      enabled: false
+#    include-exception: true
+#    include-message: always
   port: 8080
 
 spring:
-  output:
-    ansi:
-      enabled: always
+#  output:
+#    ansi:
+#      enabled: always
 
   datasource:
     url: jdbc:h2:tcp://localhost/~/term
@@ -22,10 +22,11 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
-#      ddl-auto: update
+#      ddl-auto: create
+      ddl-auto: update
 #      ddl-auto: drop
     properties:
       hibernate:
+        default_batch_fetch_size: 50
         show_sql: true
         format_sql: true
