--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 	implementation 'com.querydsl:querydsl-jpa'
 	//querydsl 추가
 	implementation 'com.querydsl:querydsl-apt'
+
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 def querydslDir = "$buildDir/generated/querydsl"
